# sfedu-ictis-ap-classes-example

./: .gitignore  AreaAware.h  CMakeLists.txt  Circle.cpp  Circle.h  Figure.cpp  Figure.h  PerimeterAware.h  Point.cpp  Point.h  Rectangle.cpp  Rectangle.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  main.cpp
